# homeops

./: .ansible-lint  .editorconfig  .envrc  .gitattributes  .gitignore  .gitmodules  .helmignore  .pre-commit-config.yaml  .sops.yaml  .sourceignore  .yamllint  .yamllint.yaml  LICENSE  Makefile  README.md  Taskfile.yaml  ansible-playbook.sh  ansible.cfg  bastion.tf  bastion.yml  bastion_client_qrencode.yml  bastion_destroy.yml  bastion_firewall.yml  bastion_provision.yml  bastion_remote.yml  bastion_setup.sh  bastion_setup.yml  bastion_wireguard.yml  compose.sh  compose.yml  debug.yml  docker-compose.test.yml  docker-compose.traefik.yml  docker-compose.yml  docker_helper.sh  down.sh  env.sample  example.env  example.inventory  example.inventory.yml  (+13 more)
.github/: renovate.json5
.taskfiles/: Brewfile  ansible.yaml  cluster.yaml  docker.yaml  flux.yaml  kubernetes.yaml  lint.yaml  precommit.yaml  setup_darwin.yaml  sops.yaml  talos.yaml  terraform.yaml
ansible/: ansible-playbook.sh  bastion.yml  example.inventory  facts.yml  setup.yml
archive/layout/: pyproject.toml
charts/: Makefile  README.md  homelab.py  pyproject.toml
compose/: auth.yml  automators.yml  codeserver.yml  diskover.yml  downloaders.yml  espial.yml  filebot.yml  gollum.yml  healthchecks.yml  mail.yml  mailserver.yml  miniflux.yml  netdata.yml  nextcloud.yml  piehole.yml  plex.yml  portainer.yml  searchers.yml  traefik.yml  watchtower.yml
config/: snapraid-runner.conf
docker/: README.md  Taskfile.yaml  compose.auth.yaml  compose.backup.yaml  compose.debug.yaml  compose.dev.yaml  compose.games.yaml  (+15 more)
(+1627 files in other folders)
