[tool.poetry]
name = "charts"
version = "0.1.0"
description = ""
authors = ["brett <brettinternet@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
diagrams = "^0.20.0"

[tool.poetry.dev-dependencies]
black = "^21.6b0"
bandit = "^1.7.0"
flake8 = "^5.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

# https://black.readthedocs.io/en/stable/usage_and_configuration/the_basics.html
[tool.black]
line-length = 88
